--- a/index.html
+++ b/index.html
@@ -1905,118 +1905,37 @@
         }
     </style>
 </div></div></div><div class="fe-block fe-block-ca353587502df7bffc11 sqs-position-sticky"><div class="sqs-block html-block sqs-block-html" data-blend-mode="NORMAL" data-block-type="2" data-border-radii="&#123;&quot;topLeft&quot;:&#123;&quot;unit&quot;:&quot;px&quot;,&quot;value&quot;:0.0&#125;,&quot;topRight&quot;:&#123;&quot;unit&quot;:&quot;px&quot;,&quot;value&quot;:0.0&#125;,&quot;bottomLeft&quot;:&#123;&quot;unit&quot;:&quot;px&quot;,&quot;value&quot;:0.0&#125;,&quot;bottomRight&quot;:&#123;&quot;unit&quot;:&quot;px&quot;,&quot;value&quot;:0.0&#125;&#125;" id="block-ca353587502df7bffc11"><div class="sqs-block-content">
+<style>
+        .image-container {
+            display: flex; /* Aligns the image and text side by side */
+            align-items: center; /* Vertically centers text with the image */
+            margin: 10px 0; /* Adds spacing between each pair */
+        }
+        .image-container img {
+            max-width: 100px; /* Set a width for the images */
+            height: auto; /* Maintain aspect ratio */
+            margin-right: 10px; /* Add space between the image and the text */
+        }
+    </style>
 
-
-  <div
-      class="
-        image-block-outer-wrapper
-        layout-caption-below
-        design-layout-fluid
-        image-position-center
-        combination-animation-site-default
-        individual-animation-site-default
-      "
-      data-test="image-block-fluid-outer-wrapper"
-    >
-      <div
-        class="fluid-image-animation-wrapper sqs-image sqs-block-alignment-wrapper"
-        data-animation-role="image"
-      >
-        <div
-          class="fluid-image-container sqs-image-content"
-          style="overflow: hidden;-webkit-mask-image: -webkit-radial-gradient(white, black);position: relative;width: 100%;height: 100%;"
-        >
-              <div class="content-fit">
-            <img data-stretch="false" data-src="https://images.squarespace-cdn.com/content/v1/66794c0184324035e9bb5b17/f497e1ce-932c-442a-a628-b1a1d74bcc29/icons8-mail-100+%281%29.png" data-image="https://images.squarespace-cdn.com/content/v1/66794c0184324035e9bb5b17/f497e1ce-932c-442a-a628-b1a1d74bcc29/icons8-mail-100+%281%29.png" data-image-dimensions="100x100" data-image-focal-point="0.5,0.5" alt="" data-load="false" elementtiming="system-image-block" src="https://images.squarespace-cdn.com/content/v1/66794c0184324035e9bb5b17/f497e1ce-932c-442a-a628-b1a1d74bcc29/icons8-mail-100+%281%29.png" width="100" height="100" alt="" sizes="(max-width: 640px) 100vw, (max-width: 767px) 100vw, 4.166666666666666vw" style="display:block;object-fit: contain; object-position: 50% 50%" srcset="https://images.squarespace-cdn.com/content/v1/66794c0184324035e9bb5b17/f497e1ce-932c-442a-a628-b1a1d74bcc29/icons8-mail-100+%281%29.png?format=100w 100w, https://images.squarespace-cdn.com/content/v1/66794c0184324035e9bb5b17/f497e1ce-932c-442a-a628-b1a1d74bcc29/icons8-mail-100+%281%29.png?format=300w 300w, https://images.squarespace-cdn.com/content/v1/66794c0184324035e9bb5b17/f497e1ce-932c-442a-a628-b1a1d74bcc29/icons8-mail-100+%281%29.png?format=500w 500w, https://images.squarespace-cdn.com/content/v1/66794c0184324035e9bb5b17/f497e1ce-932c-442a-a628-b1a1d74bcc29/icons8-mail-100+%281%29.png?format=750w 750w, https://images.squarespace-cdn.com/content/v1/66794c0184324035e9bb5b17/f497e1ce-932c-442a-a628-b1a1d74bcc29/icons8-mail-100+%281%29.png?format=1000w 1000w, https://images.squarespace-cdn.com/content/v1/66794c0184324035e9bb5b17/f497e1ce-932c-442a-a628-b1a1d74bcc29/icons8-mail-100+%281%29.png?format=1500w 1500w, https://images.squarespace-cdn.com/content/v1/66794c0184324035e9bb5b17/f497e1ce-932c-442a-a628-b1a1d74bcc29/icons8-mail-100+%281%29.png?format=2500w 2500w" loading="lazy" decoding="async" data-loader="sqs">
-            <div class="fluidImageOverlay"></div>
-              </div>
-        </div>
-      </div>
-    </div>
+<div>
   
-  
-  <div class="sqs-html-content">
-  <p href= "mailto: paula.wiszniewska@gmail.com" style="white-space:pre-wrap;">paula.wiszniewska@gmail.com</p>
+<div class="image-container">
+        <img src="https://images.squarespace-cdn.com/content/v1/66794c0184324035e9bb5b17/f497e1ce-932c-442a-a628-b1a1d74bcc29/icons8-mail-100+%281%29.png" alt="icon">
+        <a href= "mailto: paula.wiszniewska@gmail.com" style="white-space:pre-wrap;">paula.wiszniewska@gmail.com</a>
+</div>
+  <div class="image-container">
+        <img src="https://images.squarespace-cdn.com/content/v1/66794c0184324035e9bb5b17/3b0d4227-fe30-4744-890a-2dff774014a4/icons8-phone-50.png" alt="icon">
+        <p class="" style="white-space:pre-wrap;">+48 508 905 868</p>
+</div>
+  <div class="image-container">
+        <img src="https://images.squarespace-cdn.com/content/v1/66794c0184324035e9bb5b17/d7e84303-07b9-48f9-9781-24e61d6e36a9/icons8-instagram-100.png" alt="icon">
+        <a href= "mailto: paula.wiszniewska@gmail.com" style="white-space:pre-wrap;">paula.wiszniewska@gmail.com</a>
 </div>
 
-  
-</div></div></div><div class="fe-block fe-block-422c561ad77ec413063c sqs-position-sticky"><div class="sqs-block html-block sqs-block-html" data-blend-mode="NORMAL" data-block-type="2" data-border-radii="&#123;&quot;topLeft&quot;:&#123;&quot;unit&quot;:&quot;px&quot;,&quot;value&quot;:0.0&#125;,&quot;topRight&quot;:&#123;&quot;unit&quot;:&quot;px&quot;,&quot;value&quot;:0.0&#125;,&quot;bottomLeft&quot;:&#123;&quot;unit&quot;:&quot;px&quot;,&quot;value&quot;:0.0&#125;,&quot;bottomRight&quot;:&#123;&quot;unit&quot;:&quot;px&quot;,&quot;value&quot;:0.0&#125;&#125;" id="block-422c561ad77ec413063c"><div class="sqs-block-content">
-
-
-  <div
-      class="
-        image-block-outer-wrapper
-        layout-caption-below
-        design-layout-fluid
-        image-position-center
-        combination-animation-site-default
-        individual-animation-site-default
-      "
-      data-test="image-block-fluid-outer-wrapper"
-    >
-      <div
-        class="fluid-image-animation-wrapper sqs-image sqs-block-alignment-wrapper"
-        data-animation-role="image"
-      >
-        <div
-          class="fluid-image-container sqs-image-content"
-          style="overflow: hidden;-webkit-mask-image: -webkit-radial-gradient(white, black);position: relative;width: 100%;height: 100%;"
-        >
-              <div class="content-fit">
-            <img data-stretch="false" data-src="https://images.squarespace-cdn.com/content/v1/66794c0184324035e9bb5b17/3b0d4227-fe30-4744-890a-2dff774014a4/icons8-phone-50.png" data-image="https://images.squarespace-cdn.com/content/v1/66794c0184324035e9bb5b17/3b0d4227-fe30-4744-890a-2dff774014a4/icons8-phone-50.png" data-image-dimensions="50x50" data-image-focal-point="0.5,0.5" alt="" data-load="false" elementtiming="system-image-block" src="https://images.squarespace-cdn.com/content/v1/66794c0184324035e9bb5b17/3b0d4227-fe30-4744-890a-2dff774014a4/icons8-phone-50.png" width="50" height="50" alt="" sizes="(max-width: 640px) 100vw, (max-width: 767px) 100vw, 4.166666666666666vw" style="display:block;object-fit: contain; object-position: 50% 50%" srcset="https://images.squarespace-cdn.com/content/v1/66794c0184324035e9bb5b17/3b0d4227-fe30-4744-890a-2dff774014a4/icons8-phone-50.png?format=100w 100w, https://images.squarespace-cdn.com/content/v1/66794c0184324035e9bb5b17/3b0d4227-fe30-4744-890a-2dff774014a4/icons8-phone-50.png?format=300w 300w, https://images.squarespace-cdn.com/content/v1/66794c0184324035e9bb5b17/3b0d4227-fe30-4744-890a-2dff774014a4/icons8-phone-50.png?format=500w 500w, https://images.squarespace-cdn.com/content/v1/66794c0184324035e9bb5b17/3b0d4227-fe30-4744-890a-2dff774014a4/icons8-phone-50.png?format=750w 750w, https://images.squarespace-cdn.com/content/v1/66794c0184324035e9bb5b17/3b0d4227-fe30-4744-890a-2dff774014a4/icons8-phone-50.png?format=1000w 1000w, https://images.squarespace-cdn.com/content/v1/66794c0184324035e9bb5b17/3b0d4227-fe30-4744-890a-2dff774014a4/icons8-phone-50.png?format=1500w 1500w, https://images.squarespace-cdn.com/content/v1/66794c0184324035e9bb5b17/3b0d4227-fe30-4744-890a-2dff774014a4/icons8-phone-50.png?format=2500w 2500w" loading="lazy" decoding="async" data-loader="sqs">
-            <div class="fluidImageOverlay"></div>
-              </div>
-        </div>
-      </div>
-    </div>
-
-  
-  <div class="sqs-html-content">
-  <p class="" style="white-space:pre-wrap;">+48 508 905 868</p>
 </div>
-
   
-</div></div></div><div class="fe-block fe-block-3917a47d4f0901b23bca sqs-position-sticky"><div class="sqs-block html-block sqs-block-html" data-blend-mode="NORMAL" data-block-type="2" data-border-radii="&#123;&quot;topLeft&quot;:&#123;&quot;unit&quot;:&quot;px&quot;,&quot;value&quot;:0.0&#125;,&quot;topRight&quot;:&#123;&quot;unit&quot;:&quot;px&quot;,&quot;value&quot;:0.0&#125;,&quot;bottomLeft&quot;:&#123;&quot;unit&quot;:&quot;px&quot;,&quot;value&quot;:0.0&#125;,&quot;bottomRight&quot;:&#123;&quot;unit&quot;:&quot;px&quot;,&quot;value&quot;:0.0&#125;&#125;" id="block-3917a47d4f0901b23bca"><div class="sqs-block-content">
-
-
-<div
-      class="
-        image-block-outer-wrapper
-        layout-caption-below
-        design-layout-fluid
-        image-position-center
-        combination-animation-site-default
-        individual-animation-site-default
-      "
-      data-test="image-block-fluid-outer-wrapper"
-    >
-      <div
-        class="fluid-image-animation-wrapper sqs-image sqs-block-alignment-wrapper"
-        data-animation-role="image"
-      >
-        <div
-          class="fluid-image-container sqs-image-content"
-          style="overflow: hidden;-webkit-mask-image: -webkit-radial-gradient(white, black);position: relative;width: 100%;height: 100%;"
-        >
-            <a
-              class="sqs-block-image-link content-fit"
-              href="https://www.instagram.com/bo_fajnie_tu/"
-              target="_blank"
-            >
-            <img data-stretch="false" data-src="https://images.squarespace-cdn.com/content/v1/66794c0184324035e9bb5b17/d7e84303-07b9-48f9-9781-24e61d6e36a9/icons8-instagram-100.png" data-image="https://images.squarespace-cdn.com/content/v1/66794c0184324035e9bb5b17/d7e84303-07b9-48f9-9781-24e61d6e36a9/icons8-instagram-100.png" data-image-dimensions="100x100" data-image-focal-point="0.5,0.5" alt="" data-load="false" elementtiming="system-image-block" src="https://images.squarespace-cdn.com/content/v1/66794c0184324035e9bb5b17/d7e84303-07b9-48f9-9781-24e61d6e36a9/icons8-instagram-100.png" width="100" height="100" alt="" sizes="(max-width: 640px) 100vw, (max-width: 767px) 100vw, 4.166666666666666vw" style="display:block;object-fit: contain; object-position: 50% 50%" srcset="https://images.squarespace-cdn.com/content/v1/66794c0184324035e9bb5b17/d7e84303-07b9-48f9-9781-24e61d6e36a9/icons8-instagram-100.png?format=100w 100w, https://images.squarespace-cdn.com/content/v1/66794c0184324035e9bb5b17/d7e84303-07b9-48f9-9781-24e61d6e36a9/icons8-instagram-100.png?format=300w 300w, https://images.squarespace-cdn.com/content/v1/66794c0184324035e9bb5b17/d7e84303-07b9-48f9-9781-24e61d6e36a9/icons8-instagram-100.png?format=500w 500w, https://images.squarespace-cdn.com/content/v1/66794c0184324035e9bb5b17/d7e84303-07b9-48f9-9781-24e61d6e36a9/icons8-instagram-100.png?format=750w 750w, https://images.squarespace-cdn.com/content/v1/66794c0184324035e9bb5b17/d7e84303-07b9-48f9-9781-24e61d6e36a9/icons8-instagram-100.png?format=1000w 1000w, https://images.squarespace-cdn.com/content/v1/66794c0184324035e9bb5b17/d7e84303-07b9-48f9-9781-24e61d6e36a9/icons8-instagram-100.png?format=1500w 1500w, https://images.squarespace-cdn.com/content/v1/66794c0184324035e9bb5b17/d7e84303-07b9-48f9-9781-24e61d6e36a9/icons8-instagram-100.png?format=2500w 2500w" loading="lazy" decoding="async" data-loader="sqs">
-            <div class="fluidImageOverlay"></div>
-            </a>
-        </div>
-      </div>
-    </div>
-  
-  
-<div class="sqs-html-content">
-  <p href="https://www.instagram.com/bo_fajnie_tu/" target="_blank" style="white-space:pre-wrap;">https://www.instagram.com/bo_fajnie_tu/</p>
-</div>
-
-  
-</div></div></div></div></div>
+  </div></div>
     </div>
   </div>
 </section>
