--- a/index.html
+++ b/index.html
@@ -1594,6 +1594,10 @@
   .fe-block-6c49e712a0d7dfbbd705 .sqs-block-alignment-wrapper {
     align-items: flex-start;
   }
+        .bottomlinks {
+    grid-area: 7/2/15/10;
+    z-index: 0;
+    }
   @media (min-width: 768px) {
     .fe-block-6c49e712a0d7dfbbd705 {
       grid-area: 1/2/3/16;
@@ -1607,7 +1611,13 @@
     .fe-block-6c49e712a0d7dfbbd705 .sqs-block-alignment-wrapper {
       align-items: flex-start;
     }
+    .bottomlinks {
+    grid-area: 1/14/3/26;
+    z-index: 0;
+    }
   }
+    
+        
   .fe-block-aefe628c1c57ad1cfeed {
     grid-area: 7/2/13/10;
     z-index: 2;
@@ -1904,7 +1914,7 @@
             opacity: 0;
         }
     </style>
-</div></div></div><div class="fe-block fe-block-ca353587502df7bffc11 sqs-position-sticky"><div class="sqs-block html-block sqs-block-html" data-blend-mode="NORMAL" data-block-type="2" data-border-radii="&#123;&quot;topLeft&quot;:&#123;&quot;unit&quot;:&quot;px&quot;,&quot;value&quot;:0.0&#125;,&quot;topRight&quot;:&#123;&quot;unit&quot;:&quot;px&quot;,&quot;value&quot;:0.0&#125;,&quot;bottomLeft&quot;:&#123;&quot;unit&quot;:&quot;px&quot;,&quot;value&quot;:0.0&#125;,&quot;bottomRight&quot;:&#123;&quot;unit&quot;:&quot;px&quot;,&quot;value&quot;:0.0&#125;&#125;" id="block-ca353587502df7bffc11"><div class="sqs-block-content">
+</div></div></div><div class="bottomlinks"><div class="sqs-block html-block sqs-block-html" data-blend-mode="NORMAL" data-block-type="2" data-border-radii="&#123;&quot;topLeft&quot;:&#123;&quot;unit&quot;:&quot;px&quot;,&quot;value&quot;:0.0&#125;,&quot;topRight&quot;:&#123;&quot;unit&quot;:&quot;px&quot;,&quot;value&quot;:0.0&#125;,&quot;bottomLeft&quot;:&#123;&quot;unit&quot;:&quot;px&quot;,&quot;value&quot;:0.0&#125;,&quot;bottomRight&quot;:&#123;&quot;unit&quot;:&quot;px&quot;,&quot;value&quot;:0.0&#125;&#125;" id="block-ca353587502df7bffc11"><div class="sqs-block-content">
 <style>
         .image-container {
             display: flex; /* Aligns the image and text side by side */
@@ -1912,7 +1922,7 @@
             margin: 10px 0; /* Adds spacing between each pair */
         }
         .image-container img {
-            max-width: 100px; /* Set a width for the images */
+            width: 100px; /* Set a width for the images */
             height: auto; /* Maintain aspect ratio */
             margin-right: 10px; /* Add space between the image and the text */
         }
