--- a/index.html
+++ b/index.html
@@ -1598,6 +1598,10 @@
     grid-area: 7/2/15/10;
     z-index: 0;
     }
+        .copyright {
+    grid-area: 17/2/17/10;
+    z-index: 0;
+    }
   @media (min-width: 768px) {
     .fe-block-6c49e712a0d7dfbbd705 {
       grid-area: 1/2/3/13;
@@ -1612,7 +1616,11 @@
       align-items: flex-start;
     }
     .bottomlinks {
-    grid-area: 2/14/4/26;
+    grid-area: 1/20/3/26;
+    z-index: 0;
+    }
+    .copyright {
+    grid-area: 8/11/8/18;
     z-index: 0;
     }
   }
@@ -1864,57 +1872,7 @@
 </div>
 </div></div></div>
 </div>
-
-  
-<div class="fe-block fe-block-yui_3_17_2_1_1719310564787_17756 sqs-position-sticky"><div class="sqs-block image-block sqs-block-image sqs-stretched" data-block-type="5" id="block-yui_3_17_2_1_1719310564787_17756"><div class="sqs-block-content">
-    <style>
-      .sqs-block-image .sqs-block-content {
-        height: 100%;
-        width: 100%;
-      }
-        .fe-block-yui_3_17_2_1_1719310564787_17756 .fluidImageOverlay {
-          position: absolute;
-          top: 0;
-          left: 0;
-          width: 100%;
-          height: 100%;
-          mix-blend-mode: normal;
-            opacity: 0;
-        }
-    </style>
-</div></div></div><div class="fe-block fe-block-yui_3_17_2_1_1719310564787_16672 sqs-position-sticky"><div class="sqs-block image-block sqs-block-image sqs-stretched" data-block-type="5" id="block-yui_3_17_2_1_1719310564787_16672"><div class="sqs-block-content">
-    <style>
-      .sqs-block-image .sqs-block-content {
-        height: 100%;
-        width: 100%;
-      }
-        .fe-block-yui_3_17_2_1_1719310564787_16672 .fluidImageOverlay {
-          position: absolute;
-          top: 0;
-          left: 0;
-          width: 100%;
-          height: 100%;
-          mix-blend-mode: normal;
-            opacity: 0;
-        }
-    </style>
-</div></div></div><div class="fe-block fe-block-yui_3_17_2_1_1719310564787_18933 sqs-position-sticky"><div class="sqs-block image-block sqs-block-image sqs-stretched" data-block-type="5" id="block-yui_3_17_2_1_1719310564787_18933"><div class="sqs-block-content">
-    <style>
-      .sqs-block-image .sqs-block-content {
-        height: 100%;
-        width: 100%;
-      }
-        .fe-block-yui_3_17_2_1_1719310564787_18933 .fluidImageOverlay {
-          position: absolute;
-          top: 0;
-          left: 0;
-          width: 100%;
-          height: 100%;
-          mix-blend-mode: normal;
-            opacity: 0;
-        }
-    </style>
-</div></div></div><div class="bottomlinks"><div class="sqs-block html-block sqs-block-html" data-blend-mode="NORMAL" data-block-type="2" data-border-radii="&#123;&quot;topLeft&quot;:&#123;&quot;unit&quot;:&quot;px&quot;,&quot;value&quot;:0.0&#125;,&quot;topRight&quot;:&#123;&quot;unit&quot;:&quot;px&quot;,&quot;value&quot;:0.0&#125;,&quot;bottomLeft&quot;:&#123;&quot;unit&quot;:&quot;px&quot;,&quot;value&quot;:0.0&#125;,&quot;bottomRight&quot;:&#123;&quot;unit&quot;:&quot;px&quot;,&quot;value&quot;:0.0&#125;&#125;" id="block-ca353587502df7bffc11"><div class="sqs-block-content">
+<div class="bottomlinks"><div class="sqs-block html-block sqs-block-html" data-blend-mode="NORMAL" data-block-type="2" data-border-radii="&#123;&quot;topLeft&quot;:&#123;&quot;unit&quot;:&quot;px&quot;,&quot;value&quot;:0.0&#125;,&quot;topRight&quot;:&#123;&quot;unit&quot;:&quot;px&quot;,&quot;value&quot;:0.0&#125;,&quot;bottomLeft&quot;:&#123;&quot;unit&quot;:&quot;px&quot;,&quot;value&quot;:0.0&#125;,&quot;bottomRight&quot;:&#123;&quot;unit&quot;:&quot;px&quot;,&quot;value&quot;:0.0&#125;&#125;" id="block-ca353587502df7bffc11"><div class="sqs-block-content">
 <style>
         .image-container {
             display: flex; /* Aligns the image and text side by side */
@@ -1940,9 +1898,13 @@
 </div>
   <div class="image-container">
         <img src="https://images.squarespace-cdn.com/content/v1/66794c0184324035e9bb5b17/d7e84303-07b9-48f9-9781-24e61d6e36a9/icons8-instagram-100.png" alt="icon">
-        <a href= "mailto: paula.wiszniewska@gmail.com" style="white-space:pre-wrap;">paula.wiszniewska@gmail.com</a>
+        <a href="https://www.instagram.com/bo_fajnie_tu/" style="white-space:pre-wrap;">instagram.com/bo_fajnie_tu</a>
 </div>
 
+</div>
+
+<div class="copyright" style="display: flex; justify-content: center; align-items: center;">
+  <p style="white-space:nowrap; font-family: 'Courier New', monospace;">© 2025 BoFajnieTu</p>
 </div>
   
   </div></div>
