--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <base href="">
 <meta charset="utf-8" />
 <title>BoFajnieTu</title>
-<meta http-equiv="Accept-CH" content="Sec-CH-UA-Platform-Version, Sec-CH-UA-Model" /><link rel="icon" type="image/x-icon" href="https://assets.squarespace.com/universal/default-favicon.ico"/>
+<meta http-equiv="Accept-CH" content="Sec-CH-UA-Platform-Version, Sec-CH-UA-Model" /><link rel="icon" type="image/x-icon" href="/images/FajnieTuLogo.jpg"/>
 <link rel="canonical" href="https://pracowniabofajnietu.squarespace.com"/>
 <meta property="og:site_name" content="BoFajnieTu"/>
 <meta property="og:title" content="BoFajnieTu"/>
