--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <title>BoFajnieTu</title>
 <meta http-equiv="Accept-CH" content="Sec-CH-UA-Platform-Version, Sec-CH-UA-Model" />
     
-<link id="favicon" rel="icon" type="image/x-icon" href="/images/LogoB130.png"/>
+<link id="favicon" rel="icon" type="image/x-icon" href="/images/LogoW130.png"/>
 <script>
     // Function to dynamically set the favicon based on the theme
     function setFavicon(theme) {
