--- a/index.html
+++ b/index.html
@@ -392,7 +392,7 @@
                   >
                       <div class="header-title-logo">
                         <a href="/" data-animation-role="header-element">
-<img elementtiming="nbf-header-logo-desktop" src="/images/FajnieTuLogo.jpg" alt="BoFajnieTu" style="display:block" fetchpriority="high" loading="eager" decoding="async" data-loader="raw">
+<img elementtiming="nbf-header-logo-desktop" src="/images/LogoB20.png" alt="BoFajnieTu" style="display:block" fetchpriority="high" loading="eager" decoding="async" data-loader="raw">
                         </a>
                       </div>
                   </div>
@@ -511,7 +511,7 @@
                   >
                       <div class="header-title-logo" style="display: flex; align-items: center; justify-content: flex-start;">
                         <a href="/" data-animation-role="header-element">
-<img elementtiming="nbf-header-logo-desktop" src="/images/FajnieTuLogo.jpg" alt="BoFajnieTu" style="display:block" fetchpriority="high" loading="eager" decoding="async" data-loader="raw">
+<img elementtiming="nbf-header-logo-desktop" src="/images/LogoB20.png" alt="BoFajnieTu" style="display:block" fetchpriority="high" loading="eager" decoding="async" data-loader="raw">
                         </a>
                       </div>
                   </div>
