--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <title>BoFajnieTu</title>
 <meta http-equiv="Accept-CH" content="Sec-CH-UA-Platform-Version, Sec-CH-UA-Model" />
     
-<link rel="icon" type="image/png" href="/images/LogoW130.png"/>
+<link rel="icon" type="image/png" href="/images/FavIcon.png"/>
     
 <link rel="canonical" href="https://pracowniabofajnietu.squarespace.com"/>
 <meta property="og:site_name" content="BoFajnieTu"/>
