--- a/oferta.html
+++ b/oferta.html
@@ -1499,6 +1499,7 @@
     text-decoration: none; 
     color: black;
     white-space: nowrap;
+    max-width: fit-content;
   }
 
   .szczegoly:hover {
