--- a/oferta.html
+++ b/oferta.html
@@ -1484,22 +1484,21 @@
 </a>
 
 <style>
+  
   .szczegoly {
     display: flex; 
     align-items: center; 
     justify-content: space-between; 
-    width: 120px; 
-    padding: 8px 12px; 
+    padding: 6px 8px; 
     border: 1px solid black; 
     border-radius: 8px; 
-    background: #f0f0f0; 
-    font-family: sans-serif; 
+    background: #f0f0f0;  
     font-size: 14px; 
     cursor: pointer; 
     text-decoration: none; 
     color: black;
     white-space: nowrap;
-    max-width: fit-content;
+    width: fit-content;
   }
 
   .szczegoly:hover {
@@ -1507,7 +1506,8 @@
   }
 
   .arrow {
-    font-weight: bold;
+    font-weight: bold; 
+    margin-left: 20px;
   }
 </style>
 </div>
