--- a/oferta.html
+++ b/oferta.html
@@ -1487,7 +1487,7 @@
     background: #f0f0f0;  
     font-size: 14px; 
     cursor: pointer; 
-    text-decoration: none; 
+    text-decoration: none !important; 
     color: black;
     white-space: nowrap;
     width: fit-content;
