--- a/oferta.html
+++ b/oferta.html
@@ -6,7 +6,7 @@
     <!-- pracowniabofajnietu -->
 <base href="">
 <meta charset="utf-8" />
-<title>Services &mdash; BoFajnieTu</title>
+<title>Oferta &mdash; BoFajnieTu</title>
 <meta http-equiv="Accept-CH" content="Sec-CH-UA-Platform-Version, Sec-CH-UA-Model" />
 <link rel="icon" type="image/png" href="/images/FavIcon.png"/>
 <link rel="canonical" href="https://pracowniabofajnietu.squarespace.com/oferta"/>
