--- a/wnetrza.html
+++ b/wnetrza.html
@@ -7,7 +7,8 @@
 <base href="">
 <meta charset="utf-8" />
 <title>Projektowanie wnętrz &mdash; BoFajnieTu</title>
-<meta http-equiv="Accept-CH" content="Sec-CH-UA-Platform-Version, Sec-CH-UA-Model" /><link rel="icon" type="image/x-icon" href="/images/favIcon.png"/>
+<meta http-equiv="Accept-CH" content="Sec-CH-UA-Platform-Version, Sec-CH-UA-Model" />
+<link rel="icon" type="image/png" href="/images/FavIcon.png"/>
 <link rel="canonical" href="https://pracowniabofajnietu.squarespace.com/wnetrza"/>
 <meta property="og:site_name" content="BoFajnieTu"/>
 <meta property="og:title" content="Projektowanie wnętrz &mdash; BoFajnieTu"/>
