--- a/portfolio/example.html
+++ b/portfolio/example.html
@@ -901,7 +901,7 @@
             <div class="header-menu-nav-folder-content">
               <div class="header-menu-controls container header-menu-nav-item">
                 <a class="header-menu-controls-control header-menu-controls-control--active" data-action="back" href="/">
-                  <span class="chevron chevron--left"></span><span>Back</span>
+                  <span class="chevron chevron--left"></span><span>Wstecz</span>
                 </a>
               </div>
                   <div class="container header-menu-nav-item">
