--- a/portfolio/example.html
+++ b/portfolio/example.html
@@ -1013,7 +1013,7 @@
   display: grid;
   position: relative;
   grid-area: 1/1/-1/-1;
-  grid-template-rows: repeat(7,minmax(24px, auto));
+  grid-template-rows: repeat(7,auto);
   grid-template-columns:
     minmax(var(--grid-gutter), 1fr)
     repeat(8, minmax(0, var(--cell-max-width)))
