--- a/portfolio/example.html
+++ b/portfolio/example.html
@@ -1065,7 +1065,7 @@
   }
 </style><div class="fluid-engine fe-6679e2179d8c9b3efb31703d"><div class="fe-block fe-block-a856dda16cbed3e8cb27"><div class="sqs-block html-block sqs-block-html" data-blend-mode="NORMAL" data-block-type="2" data-border-radii="&#123;&quot;topLeft&quot;:&#123;&quot;unit&quot;:&quot;px&quot;,&quot;value&quot;:0.0&#125;,&quot;topRight&quot;:&#123;&quot;unit&quot;:&quot;px&quot;,&quot;value&quot;:0.0&#125;,&quot;bottomLeft&quot;:&#123;&quot;unit&quot;:&quot;px&quot;,&quot;value&quot;:0.0&#125;,&quot;bottomRight&quot;:&#123;&quot;unit&quot;:&quot;px&quot;,&quot;value&quot;:0.0&#125;&#125;" id="block-a856dda16cbed3e8cb27"><div class="sqs-block-content">
 <div class="sqs-html-content">
-  <h2 style="white-space:pre-wrap;">Mieszkanie w Warszawie, <span class="no-wrap">ul. Bluszczańska</span></h2>
+  <h2 style="white-space:pre-wrap;">Mieszkanie w&nbsp;Warszawie, ul.&nbsp;Bluszczańska</h2>
 </div>
 </div></div></div></div></div>
     </div>
