--- a/portfolio/example.html
+++ b/portfolio/example.html
@@ -1114,6 +1114,15 @@
       animation-delay: 0.2s;
     }
   }
+
+  /* Added text implementation styling */
+  .custom-gallery__text {
+    background: #f5f5f5;
+    padding: 20px;
+    border: 1px solid #ddd;
+    overflow-y: auto;
+    box-sizing: border-box;
+  }
 </style>
 
 <section id="custom-gallery-container" class="custom-gallery">
@@ -1124,9 +1133,12 @@
   // Custom Gallery Configuration
   const customGalleryItems = [
     { content: 'https://pracowniabofajnietu.pl/portfolio/images/bluszczanska_salon.jpg' },
+    { type: 'text', content: 'First text box', height: '150px' },
     { content: 'https://pracowniabofajnietu.pl/portfolio/images/bluszczanska_lazienka.jpg' },
+    { type: 'text', content: 'Second text box', height: '200px' },
     { content: 'https://pracowniabofajnietu.pl/portfolio/images/bluszczanska_gabinet.jpg' },
     { content: 'https://pracowniabofajnietu.pl/portfolio/images/bluszczanska_p5.jpg' },
+    { type: 'text', content: 'Third text box', height: '180px' },
     { content: 'https://pracowniabofajnietu.pl/portfolio/images/bluszczanska_t4.jpg' },
     { content: 'https://pracowniabofajnietu.pl/portfolio/images/bluszczanska_sypialnia.jpg' }
   ];
@@ -1136,16 +1148,23 @@
   customGalleryItems.forEach((item, index) => {
     const element = document.createElement('div');
     element.className = 'custom-gallery__item';
+
+    if (item.type && item.type === 'text') {
+      element.classList.add('custom-gallery__text');
+      element.textContent = item.content;
+      element.style.height = item.height || 'auto';
+    } else {
+      const img = document.createElement('img');
+      img.src = item.content;
+      img.className = 'custom-gallery__image';
+      img.alt = `Project ${index + 1}`;
+      element.appendChild(img);
+    }
     
-    const img = document.createElement('img');
-    img.src = item.content;
-    img.className = 'custom-gallery__image';
-    img.alt = `Project ${index + 1}`;
-    
-    element.appendChild(img);
     container.appendChild(element);
   });
 </script>
+
 
 </article>
               <section
