--- a/portfolio/example.html
+++ b/portfolio/example.html
@@ -1114,6 +1114,13 @@
       animation-delay: 0.2s;
     }
   }
+    .custom-gallery__text {
+      background: #f5f5f5;
+      padding: 20px;
+      border: 1px solid #ddd;
+      overflow-y: auto;
+      box-sizing: border-box; /* Include padding in width calculation */
+    }
 </style>
 
 <section id="custom-gallery-container" class="custom-gallery">
