--- a/portfolio/example.html
+++ b/portfolio/example.html
@@ -1131,23 +1131,27 @@
 
 <script>
   const items = [
-    { type: 'image', content: 'https://pracowniabofajnietu.pl/portfolio/images/bluszczanska_salon.jpg' },
-    { type: 'image', content: 'https://pracowniabofajnietu.pl/portfolio/images/bluszczanska_lazienka.jpg' },
-    { type: 'image', content: 'https://pracowniabofajnietu.pl/portfolio/images/bluszczanska_gabinet.jpg' },
-    { type: 'image', content: 'https://pracowniabofajnietu.pl/portfolio/images/bluszczanska_p5.jpg' },
-    { type: 'image', content: 'https://pracowniabofajnietu.pl/portfolio/images/bluszczanska_t4.jpg' },
-    { type: 'image', content: 'https://pracowniabofajnietu.pl/portfolio/images/bluszczanska_sypialnia.jpg' },
-    { type: 'text', content: 'Example text box 1', height: '150px' },
-    { type: 'text', content: 'Example text box 2', height: '200px' }
+    { content: 'https://pracowniabofajnietu.pl/portfolio/images/bluszczanska_salon.jpg' },
+    { content: 'https://pracowniabofajnietu.pl/portfolio/images/bluszczanska_lazienka.jpg' },
+    { content: 'This is a text box without a specified height.' },
+    { content: 'https://pracowniabofajnietu.pl/portfolio/images/bluszczanska_gabinet.jpg' },
+    { content: 'Another text box with a custom height.', height: '200px' },
+    { content: 'https://pracowniabofajnietu.pl/portfolio/images/bluszczanska_p5.jpg' },
+    { content: 'https://pracowniabofajnietu.pl/portfolio/images/bluszczanska_t4.jpg' },
+    { content: 'Final text box with auto height.' }
   ];
 
   const container = document.getElementById('custom-gallery-items');
+
+  function isImage(content) {
+    return content.includes('.jpg') || content.includes('.png');
+  }
 
   function createItemElement(item, index) {
     const element = document.createElement('div');
     element.className = 'custom-gallery__item';
 
-    if (item.type === 'image') {
+    if (isImage(item.content)) {
       const img = document.createElement('img');
       img.src = item.content;
       img.className = 'custom-gallery__image';
@@ -1157,7 +1161,12 @@
       const textBox = document.createElement('div');
       textBox.className = 'custom-gallery__text';
       textBox.textContent = item.content;
-      textBox.style.height = item.height || 'auto';
+
+      // Set height if specified, otherwise let it auto-adjust
+      if (item.height) {
+        textBox.style.height = item.height;
+      }
+
       element.appendChild(textBox);
     }
 
