--- a/portfolio/example.html
+++ b/portfolio/example.html
@@ -1144,12 +1144,10 @@
   const items = [
     { content: 'https://pracowniabofajnietu.pl/portfolio/images/bluszczanska_salon.jpg' },
     { content: 'https://pracowniabofajnietu.pl/portfolio/images/bluszczanska_lazienka.jpg' },
-    { content: 'This is a text box without a specified height.' },
     { content: 'https://pracowniabofajnietu.pl/portfolio/images/bluszczanska_gabinet.jpg' },
-    { content: 'Another text box with a custom height.', height: '200px' },
     { content: 'https://pracowniabofajnietu.pl/portfolio/images/bluszczanska_p5.jpg' },
     { content: 'https://pracowniabofajnietu.pl/portfolio/images/bluszczanska_t4.jpg' },
-    { content: 'Final text box with auto height.' }
+    { content: 'https://pracowniabofajnietu.pl/portfolio/images/bluszczanska_sypialnia.jpg' }
   ];
 
   const container = document.getElementById('custom-gallery-items');
