--- a/wnetrza.html
+++ b/wnetrza.html
@@ -1821,7 +1821,7 @@
     @media (max-width: 767px) {
     }
   }
-  .fe-block-f0906a5d6d303b88c745 .sqs-block {
+  .fe-block- .sqs-block {
     justify-content: flex-start;
   }
   .fe-block-f0906a5d6d303b88c745 .sqs-block-alignment-wrapper {
@@ -1915,78 +1915,18 @@
 <div class="sqs-html-content">
   <p style="text-align:justify;white-space: normal !important;white-space:pre-wrap;" class="sqsrte-small">Średni czas wykonania projektu w wariancie podstawowym to 10-15 dni projektowych w przypadku mieszkania w stanie deweloperskim z jedną łazienką.</p><p class="" data-rte-preserve-empty="true" style="white-space:pre-wrap;"></p><p style="text-align:center;white-space:pre-wrap;" class="sqsrte-small"><strong>Cena projektu w tym wariancie:</strong></p><p style="text-align:center;white-space:pre-wrap;" class="sqsrte-small"><strong>od 2500 zł brutto</strong></p>
 </div>
-</div></div></div><div class="fe-block fe-block-6c3e11812673a0b6a4c1"><div class="sqs-block website-component-block sqs-block-website-component website-component-block sqs-block-website-component" data-block-type="1337" data-definition-name="website.components.shape" id="block-6c3e11812673a0b6a4c1"><div class="sqs-block-content">
-<div
-  class="sqs-shape-block-container sqs-block-alignment-wrapper"
-  data-shape-name="circle"
-      data-blend-mode='normal'
->
-      <svg xmlns="http://www.w3.org/2000/svg" class="sqs-shape" viewBox="0 0 100 100"><circle cx="50" cy="50" r="49.5"/></svg>
-  <style>
-    #block-6c3e11812673a0b6a4c1 .sqs-block-alignment-wrapper {
-      justify-content: center;
-    }
-      #block-6c3e11812673a0b6a4c1 .sqs-shape > * {
-          stroke: none;
-      }
-        #block-6c3e11812673a0b6a4c1 {
-          --shape-block-background-color: 
-      hsla(var(--lightAccent-hsl), 1)
-;
-        }
-  </style>
-</div>
-</div></div></div><div class="fe-block fe-block-f0906a5d6d303b88c745"><div class="sqs-block html-block sqs-block-html" data-blend-mode="NORMAL" data-block-type="2" data-border-radii="&#123;&quot;topLeft&quot;:&#123;&quot;unit&quot;:&quot;px&quot;,&quot;value&quot;:0.0&#125;,&quot;topRight&quot;:&#123;&quot;unit&quot;:&quot;px&quot;,&quot;value&quot;:0.0&#125;,&quot;bottomLeft&quot;:&#123;&quot;unit&quot;:&quot;px&quot;,&quot;value&quot;:0.0&#125;,&quot;bottomRight&quot;:&#123;&quot;unit&quot;:&quot;px&quot;,&quot;value&quot;:0.0&#125;&#125;" id="block-f0906a5d6d303b88c745"><div class="sqs-block-content">
+</div></div></div>
+  <div class="fe-block fe-block-f0906a5d6d303b88c745"><div class="sqs-block html-block sqs-block-html" data-blend-mode="NORMAL" data-block-type="2" data-border-radii="&#123;&quot;topLeft&quot;:&#123;&quot;unit&quot;:&quot;px&quot;,&quot;value&quot;:0.0&#125;,&quot;topRight&quot;:&#123;&quot;unit&quot;:&quot;px&quot;,&quot;value&quot;:0.0&#125;,&quot;bottomLeft&quot;:&#123;&quot;unit&quot;:&quot;px&quot;,&quot;value&quot;:0.0&#125;,&quot;bottomRight&quot;:&#123;&quot;unit&quot;:&quot;px&quot;,&quot;value&quot;:0.0&#125;&#125;" id="block-f0906a5d6d303b88c745"><div class="sqs-block-content">
 <div class="sqs-html-content">
   <p style="text-align:justify;white-space: normal !important;white-space:pre-wrap;" class="sqsrte-small">Średni czas wykonania projektu w wariancie rozszerzonym to 25-30 dni projektowych w przypadku mieszkania w stanie deweloperskim z jedną łazienką.</p><p class="" data-rte-preserve-empty="true" style="white-space:pre-wrap;"></p><p style="text-align:center;white-space:pre-wrap;" class="sqsrte-small"><strong>Cena projektu w tym wariancie:</strong></p><p style="text-align:center;white-space:pre-wrap;" class="sqsrte-small"><strong>od 6000 zł brutto</strong></p>
 </div>
-</div></div></div><div class="fe-block fe-block-2d3fe28219bc32c5d2d5"><div class="sqs-block website-component-block sqs-block-website-component website-component-block sqs-block-website-component" data-block-type="1337" data-definition-name="website.components.shape" id="block-2d3fe28219bc32c5d2d5"><div class="sqs-block-content">
-<div
-  class="sqs-shape-block-container sqs-block-alignment-wrapper"
-  data-shape-name="circle"
-      data-blend-mode='normal'
->
-      <svg xmlns="http://www.w3.org/2000/svg" class="sqs-shape" viewBox="0 0 100 100"><circle cx="50" cy="50" r="49.5"/></svg>
-  <style>
-    #block-2d3fe28219bc32c5d2d5 .sqs-block-alignment-wrapper {
-      justify-content: center;
-    }
-      #block-2d3fe28219bc32c5d2d5 .sqs-shape > * {
-          stroke: none;
-      }
-        #block-2d3fe28219bc32c5d2d5 {
-          --shape-block-background-color: 
-      hsla(var(--lightAccent-hsl), 1)
-;
-        }
-  </style>
-</div>
-</div></div></div><div class="fe-block fe-block-f87f9bfc43355784f309"><div class="sqs-block html-block sqs-block-html" data-blend-mode="NORMAL" data-block-type="2" data-border-radii="&#123;&quot;topLeft&quot;:&#123;&quot;unit&quot;:&quot;px&quot;,&quot;value&quot;:0.0&#125;,&quot;topRight&quot;:&#123;&quot;unit&quot;:&quot;px&quot;,&quot;value&quot;:0.0&#125;,&quot;bottomLeft&quot;:&#123;&quot;unit&quot;:&quot;px&quot;,&quot;value&quot;:0.0&#125;,&quot;bottomRight&quot;:&#123;&quot;unit&quot;:&quot;px&quot;,&quot;value&quot;:0.0&#125;&#125;" id="block-f87f9bfc43355784f309"><div class="sqs-block-content">
+</div></div></div>
+  <div class="fe-block fe-block-f87f9bfc43355784f309"><div class="sqs-block html-block sqs-block-html" data-blend-mode="NORMAL" data-block-type="2" data-border-radii="&#123;&quot;topLeft&quot;:&#123;&quot;unit&quot;:&quot;px&quot;,&quot;value&quot;:0.0&#125;,&quot;topRight&quot;:&#123;&quot;unit&quot;:&quot;px&quot;,&quot;value&quot;:0.0&#125;,&quot;bottomLeft&quot;:&#123;&quot;unit&quot;:&quot;px&quot;,&quot;value&quot;:0.0&#125;,&quot;bottomRight&quot;:&#123;&quot;unit&quot;:&quot;px&quot;,&quot;value&quot;:0.0&#125;&#125;" id="block-f87f9bfc43355784f309"><div class="sqs-block-content">
 <div class="sqs-html-content">
   <p style="text-align:justify;white-space: normal !important;white-space:pre-wrap;" class="sqsrte-small">Średni czas wykonania projektu w wariancie kompleksowym to 35-50 dni projektowych w przypadku mieszkania w stanie deweloperskim z jedną łazienką.</p><p class="" data-rte-preserve-empty="true" style="white-space:pre-wrap;"></p><p style="text-align:center;white-space:pre-wrap;" class="sqsrte-small"><strong>Cena projektu w tym wariancie:</strong></p><p style="text-align:center;white-space:pre-wrap;" class="sqsrte-small"><strong>od 9000 zł brutto</strong></p>
 </div>
-</div></div></div><div class="fe-block fe-block-69846abe0bcd25405f03"><div class="sqs-block website-component-block sqs-block-website-component website-component-block sqs-block-website-component" data-block-type="1337" data-definition-name="website.components.shape" id="block-69846abe0bcd25405f03"><div class="sqs-block-content">
-<div
-  class="sqs-shape-block-container sqs-block-alignment-wrapper"
-  data-shape-name="circle"
-      data-blend-mode='normal'
->
-      <svg xmlns="http://www.w3.org/2000/svg" class="sqs-shape" viewBox="0 0 100 100"><circle cx="50" cy="50" r="49.5"/></svg>
-  <style>
-    #block-69846abe0bcd25405f03 .sqs-block-alignment-wrapper {
-      justify-content: center;
-    }
-      #block-69846abe0bcd25405f03 .sqs-shape > * {
-          stroke: none;
-      }
-        #block-69846abe0bcd25405f03 {
-          --shape-block-background-color: 
-      hsla(var(--lightAccent-hsl), 1)
-;
-        }
-  </style>
-</div>
-</div></div></div></div></div>
+</div></div></div>
+</div></div>
     </div>
   </div>
 </section>
